# LuaRunner

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  fix_files.sh  gen_cmake.sh
cmake/: internals.cmake
include/luaRunner/: execute.hpp  plugin.hpp  version.hpp
include/luaRunner/utils/: class_lua_utils.hpp  stl_lua_utils.hpp
plugins/: CMakeLists.txt
plugins/dummy/: CMakeLists.txt  dummy.cpp
src/: CMakeLists.txt  builtin.cpp  builtin.hpp  config.h.in  execute.cpp  execute.hpp  luaRunner.cpp  luaRunnerPlugin.hpp  pluginManager.cpp  pluginManager.hpp  version.cpp
tests/: helloWorld.lua
